# dirac-cwl

./: .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: deployment.yml  generate-schemas.yml  main.yml  release-please.yml
docs/: SCHEMA_GENERATION.md
docs/design/: cwl-input-sandbox-design.md  cwl-job-submission-design.md  lhcb-workflows.md  production-plugin-system.md
scripts/: generate_schemas.py
src/dirac_cwl/: __init__.py  submission_models.py
src/dirac_cwl/commands/: __init__.py  analyze_xml_summary.py  bookkeeping_report.py  core.py  create_failover_request.py  download_config.py  failover_request.py  group_outputs.py  register_accounting_report.py  report_bookkeeping.py  store_output.py  upload_log_file.py  upload_output_data.py  utils.py  workflow_accounting.py  workflow_commons.py
src/dirac_cwl/core/: utility.py
src/dirac_cwl/data_management_mocks/: data_manager.py  file_catalog.py  sandbox.py  status.py
src/dirac_cwl/execution_hooks/: core.py  registry.py
src/dirac_cwl/execution_hooks/plugins/: core.py
src/dirac_cwl/job/: __init__.py  job_report.py  job_wrapper.py  job_wrapper_template.py  submission_clients.py
src/dirac_cwl/job/executor/: __init__.py  __main__.py  _mypyc_compat.py  executor.py  fs_access.py  pathmapper.py  run_lbprodrun.py  tool.py
src/dirac_cwl/mocks/: data_manager.py  sandbox.py  status.py
src/dirac_cwl/modules/: pi_gather.py  pi_simulate.py
src/dirac_cwl/production/: __init__.py  core.py  registry.py
src/dirac_cwl/production/plugins/: __init__.py  core.py  lhcb.py
src/dirac_cwl/transformation/: __init__.py
src/dirac_cwl_proto/: __init__.py  submission_models.py
src/dirac_cwl_proto/commands/: __init__.py  core.py  download_config.py  group_outputs.py
src/dirac_cwl_proto/core/: utility.py
src/dirac_cwl_proto/data_management_mocks/: data_manager.py  sandbox.py
src/dirac_cwl_proto/execution_hooks/: core.py  registry.py
src/dirac_cwl_proto/executor/: __main__.py
src/dirac_cwl_proto/job/: __init__.py  job_wrapper.py  job_wrapper_template.py  submission_clients.py
src/dirac_cwl_proto/lhcb/: run_lbprodrun.py
src/dirac_cwl_proto/lhcb/prod_request_to_cwl/: anaprod.py
src/dirac_cwl_proto/modules/: crypto.py
src/dirac_cwl_proto/production/: __init__.py
src/dirac_cwl_proto/transformation/: __init__.py
test/: __init__.py  conftest.py  test_command_anazlyse_xml_summary.py  test_command_bookkeeping_report.py  test_command_failover_request.py  test_command_upload_log_file.py  test_command_upload_output_data.py  test_command_workflow_accounting.py  test_commands.py  test_execution_hooks_core.py  test_execution_hooks_registry.py  test_integration.py  test_job_submission_clients.py  test_job_wrapper.py  test_plugins_core.py  test_plugins_lhcb.py  test_production_core.py  test_production_plugins.py  test_production_registry.py  test_resource_requirements.py  test_submission_models.py  test_workflows.py
test/schemas/: dirac-metadata.json  plugins-summary.json
test/workflows/automatic_job_grouping/: inputs_files-strings.yaml  inputs_files.yaml  job_grouping.cwl
test/workflows/bad_references/: reference_circular1.cwl  reference_circular2.cwl  reference_doesnotexists.cwl  reference_itself.cwl
test/workflows/crypto/: base64.cwl  caesar.cwl  description.cwl  md5.cwl  rot13.cwl
test/workflows/helloworld/: description_basic.cwl  description_with_inputs.cwl
test/workflows/job_grouping/: job_grouping.cwl
test/workflows/malformed_description/: description_malformed_class.cwl  description_malformed_command.cwl
test/workflows/parallel/: description.cwl  sleep.cwl
test/workflows/pi/: description.cwl  job_grouping.cwl  pigather.cwl  pisimulate.cwl
test/workflows/pi/type_dependencies/transformation/: metadata-pi_gather.yaml
test/workflows/test_meta/: test_meta.cwl
test/workflows/test_outputs/: test_outputs_sandbox.cwl
test/workflows/transformation_grouping/: workflow.cwl
