[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "dirac-cwl"
description = "Prototype of CWL used as a production/job workflow language"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "DIRAC consortium" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing"
]
dynamic = ["version"]

# Runtime dependencies (what your package needs when installed)
dependencies = [
    "cwl-utils",
    "cwlformat",
    "cwltool",
    "dirac>=9.0.0",
    "diracx-api",
    "lbprodrun",
    "mypy",              # usually dev-only, see note below
    "pydantic",
    "pyyaml",
    "typer",
    "referencing>=0.30",
    "rich",
    "ruamel.yaml"
]

[project.optional-dependencies]
testing = ["pytest>=6", "pytest-mock"]

[project.scripts]
dirac-cwl = "dirac_cwl:app"
crypto = "dirac_cwl.modules.crypto:app"
pi-simulate = "dirac_cwl.modules.pi_simulate:app"
pi-gather = "dirac_cwl.modules.pi_gather:app"

[project.entry-points."dirac_cwl.execution_hooks"]
QueryBasedPlugin = "dirac_cwl.execution_hooks.plugins:QueryBasedPlugin"

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "PLE", "D", "G"]
ignore = ["B905", "B008", "B006"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"  # Base convention for Sphinx/reST style docstrings

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["^tests/", "^build/"]
allow_redefinition = true
enable_error_code = ["import", "attr-defined"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--ignore=test/test_metadata_plugins_lhcb.py",
    "--ignore=test/test_plugins_lhcb.py",
]
asyncio_mode = "auto"

# -------------------------
# Pixi configuration
# -------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

# Additional dev-only dependencies (not published with your package)
[tool.pixi.dependencies]
pytest = ">=6"
pytest-mock = "*"
jsonschema = "*"   # used in validation
mypy = "*"         # if you prefer not to list it under [project].dependencies
ruff = "*"         # linter, optional
pre-commit = "*"   # git hooks manager
# conda dependencies
python-gfal2 = "*"
m2crypto = "*"
pytest-asyncio = ">=1.3.0,<2"

# Ensure the package is installed in editable mode in the Pixi environment
[tool.pixi.pypi-dependencies]
dirac-cwl = { path = ".", editable = true }

[tool.pixi.tasks]
help = "echo 'Available tasks: test, lint, schemas, schemas-json, schemas-yaml, clean-schemas, test-schemas, check-schemas, validate-schemas'"

# Testing
test = "pytest test/ -v"
test-schemas = "pytest test/test_workflows.py::test_run_job_success -k 'test_meta' -v"

# Linting
lint = "mypy src"

# Schema generation tasks
schemas-json = """
echo "Generating JSON schemas..." && \
python scripts/generate_schemas.py \
  --output-dir generated_schemas \
  --format json \
  --individual \
  --unified && \
echo "Copying schemas to test locations..." && \
cp generated_schemas/dirac-metadata.json test/schemas/dirac-metadata.json && \
cp generated_schemas/plugins-summary.json test/schemas/plugins-summary.json
"""

schemas-yaml = """
echo "Generating YAML schemas..." && \
python scripts/generate_schemas.py \
  --output-dir generated_schemas \
  --format yaml \
  --unified
"""

schemas = { depends-on = ["schemas-json", "schemas-yaml"] }

# Cleanup
clean-schemas = """
echo "Cleaning generated schemas..." && \
rm -rf generated_schemas/ && \
rm -f test/schemas/dirac-metadata.json \
      test/schemas/plugins-summary.json
"""

# Schema validation
check-schemas = """
echo "Checking if schemas are up to date..." && \
python scripts/generate_schemas.py --output-dir /tmp/check_schemas --format json --unified > /dev/null 2>&1 && \
if ! diff -q generated_schemas/dirac-metadata.json /tmp/check_schemas/dirac-metadata.json > /dev/null 2>&1; then \
  echo "❌ Schemas are out of date. Run 'pixi run schemas' to update them." && \
  exit 1; \
else \
  echo "✅ Schemas are up to date."; \
fi && \
rm -rf /tmp/check_schemas
"""

validate-schemas = """
echo "Validating generated schemas..." && \
python -c "
import json, yaml
from pathlib import Path
[print(f'✓ {f}') or json.load(open(f)) for f in Path('generated_schemas').glob('**/*.json')]
[print(f'✓ {f}') or yaml.safe_load(open(f)) for f in Path('generated_schemas').glob('**/*.yaml')]
print('All schemas are valid!')
"
"""

pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run -a"
